--- a/stylesheet.css
+++ b/stylesheet.css
@@ -7,12 +7,13 @@
 .rounded-corners-5 {
   border-radius: 5px;
 }
-
+.square{
+  padding-top: 100%;
+}
 /*scrollbar*/
 ::-webkit-scrollbar {
   width: 5px;
 }
-
 ::-webkit-scrollbar-thumb {
   background: lightgrey;
   border-radius: 5px;
