--- a/stylesheet.css
+++ b/stylesheet.css
@@ -12,12 +12,13 @@
 }
 /*scrollbar*/
 ::-webkit-scrollbar {
+  height: 5px;
   width: 5px;
 }
 ::-webkit-scrollbar-thumb {
-  background: lightgrey;
-  border-radius: 5px;
+  background: #e3e3e3;
+  border-radius: 5px;z
 }
 ::-webkit-scrollbar-thumb:hover {
-  background: lightgrey;
+  background: #e3e3e3;
 }
