--- a/stylesheet.css
+++ b/stylesheet.css
@@ -10,6 +10,24 @@
 .square{
   padding-top: 100%;
 }
+.centered {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translateX(-50%) translateY(-50%);
+}
+
+/*buttons*/
+.btn-color {
+  background-color: #24cb7f;
+  border: none;
+}
+.btn-color:hover, .btn-color:focus, .btn-color:active {
+  background-color: #20ab6c;
+  border: none;
+}
+
+
 /*scrollbar*/
 ::-webkit-scrollbar {
   height: 5px;
@@ -21,4 +39,8 @@
 }
 ::-webkit-scrollbar-thumb:hover {
   background: #e3e3e3;
+}
+::-webkit-scrollbar-track {
+    margin-top: 20px;
+    margin-bottom: 20px;
 }
