--- a/src/stylesheet.css
+++ b/src/stylesheet.css
@@ -66,6 +66,11 @@
   background-color: var(--mycolor) !important;
   border: 1px solid var(--mycolor) !important;
 }
+.btn-colored:disabled {
+  background-color: var(--mycolor);
+  border: 1px solid var(--mycolor);
+  filter: brightness(102%);
+}
 
 /*links*/
 .link-colored {
@@ -76,7 +81,7 @@
 .link-colored:hover {
   color: var(--mycolor);
   text-decoration: none;
-  filter: brightness(85%);
+  filter: brightness(90%);
 }
 
 /*sidebar option*/
